[package]
name = "minigraf-node"
version = "1.1.1"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8", features = ["napi6"] }
napi-derive = "3"
minigraf = { version = "=1.2.0" }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.1"

[workspace]
members = ["."]
